Practica 2: primera parte terminada. Añadido diferentes tipos de ayuda multimedia al test.

--- a/TTA_EJEMPLO_PR1/app/src/main/AndroidManifest.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/AndroidManifest.xml
@@ -19,5 +19,5 @@
         <activity android:name=".TestActivity" />
         <activity android:name=".ExerciseActivity"></activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
